<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivFoto_contacto"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/ivFoto"
        app:civ_border_color="#FFFFFF"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInicial"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/tvInicial"
            android:textAlignment="center"
            android:textColor="@color/blue_A700" />

        <TextView
            android:id="@+id/tvItemNombre"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvItemNombre"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvItemApellidos"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvItemApellidos"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>