<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="69dp"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="horizontal"
    android:focusable="true">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="78dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInicial"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/tvInicial"
            android:textAlignment="center"
            android:textColor="@color/blue_A700" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivFoto_contacto"
            android:layout_width="59dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/ivFoto"
            android:textAlignment="textEnd"
            app:civ_border_color="#FFFFFF"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/tvItemNombre"
            android:layout_width="257dp"
            android:layout_height="34dp"
            android:text="@string/tvItemNombre"
            android:textAlignment="textStart"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>